# crispy-chainsaw

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
assets/: CMakeLists.txt
assets/materials/: 2d.material  pointsprites.material  skyboxes.material  solids.material
assets/meshes/: Bottom.mesh  Cylinder.mesh  Middle.mesh  Top.mesh
assets/particles/: solarspiral.particle
assets/shaders/: fs_lights.sc  varying.def.sc  vs_lights.sc
assets/shaders/glsl/: fs_textures.sc  vs_textures.sc
assets/textures/: nova.dds  pew.ktx  spot.ktx
audio/: AudioAnalyzer.cpp  AudioAnalyzer.hpp  AudioEngine.cpp  AudioEngine.hpp  AudioOutput.cpp  AudioOutput.hpp  AudioProvider.cpp  AudioProvider.hpp  AudioSystem.hpp  SoundIO.cpp  SoundIO.hpp
cmake/: FindPortaudio.cmake
core/: Application.cpp  Application.hpp  ConfigurationManager.cpp  ConfigurationManager.hpp  Math.hpp  ResourceManager.hpp  SceneManager.cpp  SceneManager.hpp  main.cpp
libs/: CMakeLists.txt  fftwpp.cpp
proto/: CMakeLists.txt  ConfigurationServer.proto
res/: cylinder.blend  nova.xcf  pew.xcf  roundedCube.blend  spot.xcf  starfield.xcf
scenes/: BlackHoleScene.cpp  BlackHoleScene.hpp  SolarSpiralScene.cpp  SolarSpiralScene.hpp  WarpScene.cpp  WarpScene.hpp
src/: audio.cpp  audioAnalyzer.cpp  audioAnalyzer.h  audioAnalyzer.hpp  audioEngine.cpp  audioEngine.hpp  audioOutput.cpp  audioOutput.hpp  audioProvider.cpp  audioProvider.hpp  audioStream.cpp  audioStream.h  audioSystem.hpp  circleSpectrumScene.cpp  circleSpectrumScene.hpp  gfxUtils.cpp  gfxUtils.hpp  gl.hpp  globals.hpp  imgui.hpp  main.cpp  math.hpp  resourceManager.cpp  resourceManager.hpp  sceneManager.cpp  sceneManager.hpp  soundIO.cpp  soundIO.hpp  warpScene.cpp  warpScene.hpp
